syntax = "proto3";
package unity_extensions;
import "proto_vector3_int.proto";
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoBoundsInt {
  ProtoVector3Int position = 1;
  ProtoVector3Int size = 2;
}