syntax = "proto3";
package unity_extensions;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoColor {
  float r = 1;
  float g = 2;
  float b = 3;
  float a = 4;
}