syntax = "proto3";
package unity_extensions;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoColor32 {
  int32 r = 1;
  int32 g = 2;
  int32 b = 3;
  int32 a = 4;
}