syntax = "proto3";
package unity_extensions;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoVector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}