syntax = "proto3";
package unity_extensions;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message ProtoVector3Int {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}